--- a/src/examples/MobilePayFruitshop-Android/app/src/main/res/values/strings.xml
+++ b/src/examples/MobilePayFruitshop-Android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MobilePayFruitshop</string>
+    <string name="app_name">Fruitshop</string>
     <string name="merchant_id_generic">APPDK0000000000</string>
 
     <string name="product_name_orange">Orange</string>
@@ -17,6 +17,8 @@
     <string name="payment_result_dialog_cancelled_title">MobilePay Canceled</string>
     <string name="payment_result_dialog_cancelled_message">You canceled the payment flow from MobilePay. Please pick a fruit and try again.</string>
     <string name="payment_result_dialog_error_title">MobilePay Error %1$s</string>
+    <string name="payment_result_dialog_error_update_title">MobilePay Update</string>
+    <string name="payment_result_dialog_error_update_message">You have to update MobilePay before the payment can be processed.</string>
 
     <string name="install_mobilepay_dialog_title">MobilePay not installed</string>
     <string name="install_mobilepay_dialog_message">Do you want to download MobilePay?</string>
